--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,15 @@
 *.userprefs
 
 # Build results
-
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Ll]og/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
